--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -13,8 +13,8 @@ Logged in as {{ user.username }}
 </form>
 {% else %}
 
-<a href="#">Sign up</a>
-<a href="#">Login</a>
+<a href="{% url 'signupuser' %}">Sign up</a>
+<a href="{% url 'loginuser' %}">Login</a>
 
 
 
